Create CSS styling

--- a/favorite-places.html
+++ b/favorite-places.html
@@ -26,5 +26,7 @@
 
       <p><a href="https://en.wikipedia.org/wiki/Portland,_Oregon">See more </a> info about Portland, OR.</p>
 
+      <p>Here are the places we would like <a href="places-to-go.html">to go</a> one day.</p>
+
   </body>
 </html>
